# cauto

./: Makefile  README  README.md  TODO
lib/cauto/: .gitignore  CMakeLists.txt  cauto
pkg/: .gitignore  PKGBUILD
